Fixed background color not correct on mobile sometimes.

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,11 @@ body, div {
     font-weight: normal;
 }
 body {
-  background: white;
+  background-color: white;
   position: absolute;
+}
+body > div {
+  background-color: white;
 }
 
 /**
